src/objects/Xero_Service__c.object
<CustomObject>
    <fields>
        <fullName>API_Endpoint_URL__c</fullName>
        <label>API Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorisation_URL__c</fullName>
        <label>Authorisation URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKCS_Private_Key__c</fullName>
        <description>Private key in PKCS format. See http://www.rsa.com/rsalabs/node.asp?id=2130.</description>
        <inlineHelpText>Only required for private applications.</inlineHelpText>
        <label>PKCS Private Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Xero Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Xero Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>